tests/macros/int/page_size.stderr
error: option `page_size` does not exist for kind `int`
 --> $DIR/page_size.rs:2:33
  |
2 |     discourse::questions![Int { page_size: todo!() }];
  |                                 ^^^^^^^^^
