tests/macros/int/page_size.rs
fn main() {
    discourse::questions![Int { page_size: todo!() }];
}
